--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "noduro",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -10,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^23.2.0"
+    "electron": "^23.2.4"
   },
   "dependencies": {
     "electron-json-storage": "^4.6.0"
-  }
+  },
+  "description": ""
 }
