--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,12 +21,24 @@
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
-      "windows": {
-        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
-      },
+      // "windows": {
+      //   "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+      // },
       "args": [".", "--remote-debugging-port=9222"],
       "outputCapture": "std",
       "console": "integratedTerminal"
+    },
+    {
+      "name": "Debug Main Process",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      // "windows": {
+      //   "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+      // },
+      "args" : ["."],
+      "outputCapture": "std"
     }
   ]
 }
