--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,13 @@
   "configurations": [
     {
       "name": "Renderer",
-      "port": 9222,
-      "request": "attach",
       "type": "chrome",
-      "webRoot": "${workspaceFolder}"
+      "request": "attach",
+      "port": 9222,
+      "webRoot": "${workspaceFolder}/",
+      "sourceMaps": true,
+      "timeout": 30000,
+      "trace": true
     },
     {
       "name": "Main",
