--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "electron": "^23.3.0"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
+    "electron-google-oauth": "^1.0.1",
     "electron-json-storage": "^4.6.0",
+    "firebase": "^9.21.0",
     "google-auth-library": "^8.7.0"
   },
   "description": "Noduro is an electron-based cross-platform app that utilizes HTML, CSS, Javascript, and Python to provide Daily Living Skill (DLS) instruction to children and young adults with disabilities. The installation process for developers is simple and straightforward. Here's  the process:"
